# minesweeper

./: .clang-format  .gitignore  CMakeLists.txt  README.md  cell.cpp  cell.hpp  constants.hpp  game.cpp  game.hpp  main.cpp  minefield.cpp  minefield.hpp  sdl_helpers.hpp  sprites.hpp
docs/: minesweeper.js
input/: mouse_manager.cpp  mouse_manager.hpp
minefield/: cell.hpp  minefield.hpp
scenes/: game_scene.cpp  game_scene.hpp  menu_scene.cpp  menu_scene.hpp  scene_interface.hpp  scene_manager.cpp  scene_manager.hpp
src/: constants.hpp  game.cpp  game.hpp  hashers.hpp  main.cpp  sdl_helpers.hpp  sprites.hpp
src/input/: mouse_manager.cpp  mouse_manager.hpp
src/minefield/: cell.cpp  cell.hpp  minefield.cpp  minefield.hpp
src/scenes/: game_scene.cpp  game_scene.hpp  menu_scene.cpp  menu_scene.hpp  scene_interface.hpp  scene_manager.cpp  scene_manager.hpp
web/: minesweeper.data  minesweeper.html  minesweeper.js
